prax-codegen/tests/ui/group_by_order_by_bare_col_not_in_by_fail.rs
// Fixture: order_by bare column `region` is not in the `by:` list
// Expected diagnostic: "order by `region` requires `region` in `by:`"

fn main() {
    let client = ();
    let _ = prax_codegen::group_by!(client.user, {
        by: [team_id],
        _count: { _all: true },
        order_by: { region: desc },
    });
}
